prepare new variant "SImple German", will follow with the next commit(s) due to subversion problems

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -48,7 +48,11 @@
    of suggestions.
    org/languagetool/resource/de/hunspell/create_dict.sh can be used to create
    the three morfologik spell checker dictionaries (German, Austrian, and Swiss).
-
+  -new language variant "Simple German", with rules contributed by Annika Nietzio.
+   This variant uses 'de-DE-x-simple-language' as a language code. It's not
+   yet available in the stand-alone GUI, but in the server and the command
+   line version.
+ 
  -Malayalam:
   -now uses the default sentence tokenizer, not the English one (because languages
    are now modules that don't depend on each other)
