fix sf bug #3608410

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -96,6 +96,9 @@
  -bugfix: fix false alarm of unpaired bracket rule on smileys :-) and ;-) (Sourceforge bug #3604367)
  
  -bugfix: testrules now report all cases when untouched examples were touched (Sourceforge bug #3600995)
+ 
+ -bugfix: the whitespace rule now reports also combinations of non-breaking space and white space 
+  characters (Sourceforge bug #3608410)
 
  -stand-alone GUI: the very first check for languages with a lot of rules
   (e.g. German, French) should now be faster
