latest i18n data from Transifex

--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -191,7 +191,7 @@ km = khmer
 
 lt = litu\u00e0
 
-missing_space_after_comma = Escriu un espai despr\u00e9s de la coma
+missing_space_after_comma = Deixeu un espai despr\u00e9s de la coma
 
 ml = malai\u00e0lam
 
@@ -201,7 +201,7 @@ no_space_after = No poseu cap espai despr\u00e9s dels par\u00e8ntesis d'obertura
 
 no_space_before = No poseu cap espai despr\u00e9s dels par\u00e8ntesis de tancament
 
-no_space_before_dot = No poseu cap espai abans del punt
+no_space_before_dot = No deixeu cap espai abans del punt
 
 pl = polon\u00e8s
 
@@ -219,7 +219,7 @@ sk = eslovac
 
 sl = eslov\u00e8
 
-space_after_comma = Poseu un espai despr\u00e9s de la coma, per\u00f2 no abans de la coma
+space_after_comma = Deixeu un espai despr\u00e9s de la coma, per\u00f2 no abans
 
 spelling = S'ha trobat un possible error ortogr\u00e0fic
 
