--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -261,14 +261,14 @@ guiDuplicate = Fichier de r\u00e8gles dupliqu\u00e9
 
 ja = Japonais
 
-# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = Erreur \: d\u00e9sol\u00e9, la langue  \u00ab {0} \u00bb du document n\u2019est pas support\u00e9e par LanguageTool.
 
-# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+http_server_start_failed = Le serveur HTTP n\u2019a pas pu \u00eatre d\u00e9marr\u00e9 sur l\u2019h\u00f4te "{0}", port {1}.\nPeut-\u00eatre que quelque-chose d\u2019autre fonctionne d\u00e9j\u00e0 sur ce port ?
 
-# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+https_server_start_failed = Le serveur HTTPS n\u2019a pas pu \u00eatre d\u00e9marr\u00e9 sur l\u2019h\u00f4te "{0}", port {1}.\nPeut-\u00eatre que quelque-chose d\u2019autre fonctionne d\u00e9j\u00e0 sur ce port ?
 
-# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+https_server_start_failed_unknown_reason = Le serveur HTTPS n\u2019a pas pu \u00eatre d\u00e9marr\u00e9 sur l\u2019h\u00f4te "{0}", port {1}
 
-# tray_menu_enable_server = Run HTTP server
+tray_menu_enable_server = Lancer le serveur HTTP
 
-# tray_tooltip_server_running = LanguageTool (HTTP server running)
+tray_tooltip_server_running = LanguageTool (serveur HTTP actif)
