--- a/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -195,7 +195,7 @@ missing_space_after_comma = Inserire uno spazio dopo la virgola
 
 ml = Malayalam
 
-nl = Olandese
+nl = Neerlandese
 
 no_space_after = Non inserire lo spazio dopo l'apertura di parentesi
 
