--- a/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
+++ b/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
@@ -261,14 +261,14 @@ guiDuplicate = Fi\u0219ier de reguli duplicat\!
 
 ja = Japonez\u0103
 
-# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = Eroare. Din p\u0103cate, limba "{0}" nu este suportat\u0103 de LanguageTool.
 
-# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+http_server_start_failed = Server-ul HTTP LanguageTool nu a putut porni la "{0}" pe portul "{1}".\nProbabil un alt program folose\u0219te deja acest port.
 
-# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+https_server_start_failed = Server-ul HTTPS LanguageTool nu a putut porni la "{0}" pe portul "{1}".\nProbabil un alt program folose\u0219te deja acest port.
 
-# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+https_server_start_failed_unknown_reason = Server-ul HTTPS LanguageTool nu a putut porni la "{0}" pe portul "{1}".
 
-# tray_menu_enable_server = Run HTTP server
+tray_menu_enable_server = Rulare server HTTP
 
-# tray_tooltip_server_running = LanguageTool (HTTP server running)
+tray_tooltip_server_running = LanguageTool (server-ul HTTP ruleaz\u0103)
