document Tika update

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,7 +2,7 @@ LanguageTool Change Log
 
 2.2-dev (release planned for 2013-06-30)
 
- -...
+ -Updated Tika (used for language detection) from 0.9 to 1.3
 
 
 2.1 (2013-03-31)
