[server] Use 'enabledOnly=yes' for disabling all the rules except those explicitly enabled. Ex.: http://localhost:8081/?language=en&enabled=STRANGE_RULE,ANOTHER_RULE&enabledOnly=yes&text=my+text

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -2,8 +2,16 @@ LanguageTool Change Log
 
 2.2-dev (release planned for 2013-06-30)
 
- -Updated Tika (used for language detection) from 0.9 to 1.3
+ -Catalan:
+  -improved rules
+  -fixed false alarms
 
+ -HTTP server:
+  -enabling and disabling rules at the same time (keeping the rest of the default options) is now allowed. 
+  To disable all the rules except those explicitly enabled, you can use the parameter enabledOnly=yes. Ex.: 
+  http://localhost:8081/?language=en&enabled=STRANGE_RULE,ANOTHER_RULE&enabledOnly=yes&text=my+text
+
+ -Updated Tika (used for language detection) from 0.9 to 1.3
 
 2.1 (2013-03-31)
 
