the "--version" parameter of languagetool-commandline.jar now also prints the build date

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -13,6 +13,10 @@ LanguageTool Change Log
 
  -Updated Tika (used for language detection) from 0.9 to 1.3
 
+ -The "--version" parameter of languagetool-commandline.jar now also prints
+  the build date
+
+
 2.1 (2013-03-31)
 
  -Breton:
