[ca] Categorize rules according to he Internationalization Tag Set (ITS) Version 2.0. Reorder some rules.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -5,6 +5,8 @@ LanguageTool Change Log
  -Catalan:
   -improved rules
   -fixed false alarms
+  -rules have been categorized according to the upcoming Internationalization Tag Set (ITS)
+   Version 2.0 standard from W3C.
 
  -HTTP server:
   -enabling and disabling rules at the same time (keeping the rest of the default options) is now allowed. 
