A rule that matches several punctuation signs such as : ; and % preceded by whitespace. Fix for BUG ID 3607406: no space before semicolon Checks for:  <a word> : and suggests <a word>:  <a word> ; and suggests <a word>;  <a number> % and suggests <a number>%

--- a/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Possibile errore di battitura (senza suggerimenti
 
 desc_spelling_short = Errore di battitura
 
+# 3607406 +
+
+desc_whitespace_before_punctuation = Utilizzo dello spazio prima di : ; %
+
+# 3607406 -
+
 double_dots_short = Due punti consecutivi
 
 double_commas_short = Due virgole consecutive
@@ -202,6 +208,16 @@ no_space_after = Non inserire lo spazio dopo l'apertura di parentesi
 no_space_before = Non inserire lo spazio dopo la chiusura di parentesi
 
 no_space_before_dot = Non inserire lo spazio dopo il punto a capo
+
+# 3607406 +
+
+no_space_before_colon = Non inserire uno spazio prima dei due punti
+
+no_space_before_semicolon = Non inserire uno spazio prima del punto e virgola
+
+no_space_before_percentage = Non inserire uno spazio prima del segno di percentuale
+
+# 3607406 -
 
 pl = Polacco
 
