--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Spelling mistake
 
+# 3607406 +
+
+desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Two consecutive dots
 
 double_commas_short = Two consecutive comma
@@ -202,6 +208,16 @@ no_space_after = Don't put a space after the opening parenthesis
 no_space_before = Don't put a space before the closing parenthesis
 
 no_space_before_dot = Don't put a space before the full stop
+
+# 3607406 +
+
+no_space_before_colon = Don't put a space before the colon
+
+no_space_before_semicolon = Don't put a space before the semicolon
+
+no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polish
 
