--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -8,6 +8,9 @@ LanguageTool Change Log
   -rules have been categorized according to the upcoming Internationalization Tag Set (ITS)
    Version 2.0 standard from W3C.
 
+ -Greek:
+  -added a few rules (by Panagiotis Minos)
+
  -HTTP server:
   -enabling and disabling rules at the same time (keeping the rest of the default options) is now allowed. 
   To disable all the rules except those explicitly enabled, you can use the parameter enabledOnly=yes. Ex.: 
