--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -8,6 +8,9 @@ LanguageTool Change Log
   -rules have been categorized according to the upcoming Internationalization Tag Set (ITS)
    Version 2.0 standard from W3C.
 
+ -French:
+  -updated POS tag dictionary and Hunspell dictionary to Dicollecte-4.10
+  
  -Greek:
   -added a few rules (by Panagiotis Minos)
 
