--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -18,6 +18,14 @@ LanguageTool Change Log
  -Greek:
   -added a few rules (by Panagiotis Minos)
 
+ -Russian:
+  -added some new rules (thanks for this rules to Julia Semenenko)
+  -fixed some false alarms
+  -added new segmentation rules
+  -added false-frend rule
+
+
+
  -HTTP server:
   -enabling and disabling rules at the same time (keeping the rest of the default options) is now allowed. 
   To disable all the rules except those explicitly enabled, you can use the parameter enabledOnly=yes. Ex.: 
