--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -22,8 +22,16 @@ LanguageTool Change Log
   -added some new rules (thanks for this rules to Julia Semenenko)
   -fixed some false alarms
   -added new segmentation rules
-  -added false-frend rule
+  -added false-friend rule
 
+ -Ukrainian
+  -new POS dictionary
+  -new synthesizer dictionary
+  -new spelling dictionary
+  -new grammar rules
+  -updated sentence tokenizer rules
+  -disambiguator implemented
+  -word tokenizer updated to ignore accent and soft hyphen and understand different apostrophes
 
 
  -HTTP server:
