[ru] add bitext rule, fix false grammar error

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -23,6 +23,7 @@ LanguageTool Change Log
   -fixed some false alarms
   -added new segmentation rules
   -added false-friend rule
+  -added bitext rule
 
  -Ukrainian
   -new POS dictionary
