--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -1,5 +1,5 @@
-# English translation of LanguageTool
-# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+# DO NOT MODIFY MANUALLY - all changes are done at https://www.transifex.com/projects/p/languagetool/
+# Copyright (C) 2006-2013 the LanguageTool team (http://www.languagetool.org)
 
 atd = \u0412\u044b\u0437\u043d\u0430\u0447\u044b\u0446\u044c \u043c\u043e\u0432\u0443 \u0430\u045e\u0442\u0430\u043c\u0430\u0442\u044b\u0447\u043d\u0430
 
