--- a/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
+++ b/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
@@ -1,5 +1,5 @@
-# English translation of LanguageTool
-# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+# DO NOT MODIFY MANUALLY - all changes are done at https://www.transifex.com/projects/p/languagetool/
+# Copyright (C) 2006-2013 the LanguageTool team (http://www.languagetool.org)
 
 atd = \u0391\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03bf\u03c2 \u03b5\u03bd\u03c4\u03bf\u03c0\u03b9\u03c3\u03bc\u03cc\u03c2 \u03b3\u03bb\u03ce\u03c3\u03c3\u03b1\u03c2
 
