--- a/languagetool-language-modules/ja/src/main/resources/org/languagetool/MessagesBundle_ja.properties
+++ b/languagetool-language-modules/ja/src/main/resources/org/languagetool/MessagesBundle_ja.properties
@@ -1,5 +1,5 @@
-# English translation of LanguageTool
-# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+# DO NOT MODIFY MANUALLY - all changes are done at https://www.transifex.com/projects/p/languagetool/
+# Copyright (C) 2006-2013 the LanguageTool team (http://www.languagetool.org)
 
 atd = \u81EA\u52D5\u3067\u8A00\u8A9E\u3092\u691C\u51FA
 
