--- a/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
+++ b/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
@@ -1,5 +1,5 @@
-# English translation of LanguageTool
-# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+# DO NOT MODIFY MANUALLY - all changes are done at https://www.transifex.com/projects/p/languagetool/
+# Copyright (C) 2006-2013 the LanguageTool team (http://www.languagetool.org)
 
 atd = \u1791\u1791\u17bc\u179b\u200b\u179f\u17d2\u1782\u17b6\u179b\u17cb\u200b\u1797\u17b6\u179f\u17b6\u200b\u178a\u17c4\u1799\u200b\u200b\u179f\u17d2\u179c\u17d0\u1799\u200b\u1794\u17d2\u179a\u179c\u178f\u17d2\u178f\u17b7
 
